--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "electron-builder",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:serialport/electron-serialport.git"
+    "url": "git@github.com:Robinsssson/MotorControlUI.git"
   },
   "keywords": [
     "Electron",
@@ -21,8 +23,11 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "electron": "^26.4.0",
-    "electron-builder": "^24.0.0"
+    "electron-builder": "^24.0.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.11.0"
   },
   "dependencies": {
     "chart.js": "^4.4.6",
